--- a/level3.html
+++ b/level3.html
@@ -5,12 +5,14 @@
 <link rel="stylesheet" href="prj_1stysheet.css">
 </head>
 <body>
-<div class=parent>
-	<div class=child3>
-	
-		<img src="thirdlevel.png" width="1250" height="800">
-	</div>
-</div>
+    <div class=container>
+        <img src="thirdlevel.png">
+        <button type="button" class=btn8 onclick="alert('Hello world!')">Click Me!</button>
+        <button type="button" class=btn9 onclick="alert('Hello world!')">Click Me!</button>
+        <button type="button" class=btn10 onclick="alert('Hello world!')">Click Me!</button>
+        <button type="button" class=btn11 onclick="alert('Hello world!')">Click Me!</button>
+        <button type="button" class=btn12 onclick="alert('Hello world!')">Click Me!</button>
+    </div>
 <div>
 	<h1 class=leftsidepadding>Riddle:</h1>
 		<?php
@@ -32,10 +34,6 @@
 		}
         ?>
 </div>
-<button type="button" class=float onclick="alert('Hello world!')">Click Me!</button>
-<button type="button" class=float2 onclick="alert('Hello world!')">Click Me!</button>
-<button type="button" class=float3 onclick="alert('Hello world!')">Click Me!</button>
-<button type="button" class=float4 onclick="alert('Hello world!')">Click Me!</button>
-<button type="button" class=float5 onclick="alert('Hello world!')">Click Me!</button>
+<button type="button" class=HomeButton onclick="alert('Home')">Home</button>
 </body>
 </html>
